--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 </head>
 
 <body>
-    <section class="container">
+    <header class="container">
         <nav>SolarPunk.Ph</nav>
-    </section>
+    </header>
+
+    <main class="container">
+        <div class="hero-clip">
+            <img src="img/Comp 1.gif" alt="dummy iamge">
+        </div>
+        
+    </main>
 
 </body>
 
