--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <header class="container">
-        <nav>SolarPunk.Ph</nav>
+        <nav>solarpunk.ph</nav>
     </header>
 
     <main class="container">
-        
+
         <div class="hero-clip">
             <img src="img/Comp 1.gif" alt="dummy iamge">
         </div>
-        
+
     </main>
 
 </body>
