--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Solar Punk Ph</title>
 </head>
 
 <body>
     <header class="container">
-        <nav>solarpunk.ph</nav>
+        <nav>
+            <div class="">solarpunk.ph</div>
+            <button class="btn-2"><a href="#">Call to Action</a></button>
+        </nav>
     </header>
 
     <main class="container">
-
         <div class="hero-clip">
             <img src="img/Comp 1.gif" alt="dummy iamge">
         </div>
