--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>3.js Microphone Visualization</title>
+    <script src="main.js"></script>
     <style>
       body {
         margin: 0;
