--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>3.js Microphone Visualization</title>
-    <script src="main.js"></script>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <title>Three.js Microphone Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.133.2/build/three.min.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
-    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/libs/stats.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
